# shaderc

./: meson.build  meson_options.txt
glslc/: build-version.inc.in  meson.build
glslc/src/: meson.build
libshaderc/: meson.build
libshaderc/include/: meson.build
libshaderc/src/: meson.build
libshaderc_util/: meson.build
libshaderc_util/include/: meson.build
libshaderc_util/src/: meson.build
meson-tools/: get-version.py
